link to download processing

--- a/guide.html
+++ b/guide.html
@@ -25,7 +25,7 @@
 
     <section class="slide" data-toc data-markdown>
       <script type="text/template">
-        ##Instructor / Chapter Lead Guide
+        ##Lead Instructor Guide
 
         ##Girls Learning Code: Generative Art with Processing
         <br>
@@ -45,6 +45,7 @@
         Processing builds upon the Java language, and is often used in electronic arts, new media art, and visual design. The application itself allows anyone to code in something called a Sketchbook, where programs can be saved and previewed instantly. During this workshop, sketches are saved online at <a href="https://www.openprocessing.org/">openprocessing.org</a> using Processing.js. Here are a few resources to get you started:
 
         * Processing <a href="https://processing.org/reference/">Reference</a>
+        * <a href="https://processing.org/download">Download Processing</a> (backup to online version)
         * Processing.js <a href="http://processingjs.org/articles/p5QuickStart.html#quickstart">Quick Start</a>
         * Browse <a href="https://www.openprocessing.org/browse#">examples</a> in OpenProcessing
 
@@ -338,6 +339,7 @@
     Processing builds upon the Java language, and is often used in electronic arts, new media art, and visual design. The application itself allows anyone to code in something called a Sketchbook, where programs can be saved and previewed instantly. During this workshop, sketches are saved online at <a href="https://www.openprocessing.org/">openprocessing.org</a> using Processing.js. Here are a few resources to get you started:
 
     * Processing <a href="https://processing.org/reference/">Reference</a>
+    * <a href="https://processing.org/download">Download Processing</a> (backup to online version)
     * Processing.js <a href="http://processingjs.org/articles/p5QuickStart.html#quickstart">Quick Start</a>
     * Browse <a href="https://www.openprocessing.org/browse#">examples</a> in OpenProcessing
   </script>
@@ -485,7 +487,7 @@
           <td> Before we begin coding in Processing, here are some things to keep in mind.</td>
         </tr>
       </table>
-      
+
   </script>
 </section>
 
