--- a/slides.html
+++ b/slides.html
@@ -709,7 +709,7 @@
         Possible Solution:
 
         ``` processing
-        int grow = 1; //Name our variable and assign a value
+        int grow = 1; // (1) Name our variable and assign a value
 
         void setup(){
           size(600,600);
@@ -722,15 +722,15 @@
           }
           if(keyPressed == true){
             background(255);
-            grow = 1; //Reset grow to 1 when the background clears
+            grow = 1; // (4) Reset grow to 1 when the background clears
           }
         }
 
         void paintbrush(){
           fill(20,200,200);
           noStroke();
-          grow = grow + 1; //Make the variable increase by 1 each time
-          ellipse(mouseX,mouseY,20,grow); //Replace a value with grow
+          grow = grow + 1; // (3) Make the variable increase by 1 each time
+          ellipse(mouseX,mouseY,20,grow); // (2) Replace a value with grow
         }
         ```
 
