Revisions after 2nd test

--- a/slides-en.html
+++ b/slides-en.html
@@ -28,8 +28,8 @@
       <div class="instructions">
         <!-- ADD WIFI INFO HERE -->
         <h2>Get <br>Connected</h2>
-        <p><strong>Wifi:</strong> Hacker You</p>
-        <p><strong>Password:</strong> Thisishackeryou</p>
+        <p><strong>Wifi:</strong> Wifi Network</p>
+        <p><strong>Password:</strong> Wifi Password</p>
         <hr>
 
 
@@ -37,7 +37,7 @@
 
       <footer>
         <a class="left" rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" src="framework/img/cc-by-nc.png" /></a>
-        <p class="left">Slides created by <a href="http://christinatruong.com">Christina Truong</a>. Content created by Kassandra Lenters for <a prefix="cc: http://creativecommons.org/ns#" href="http://ladieslearningcode.com" property="cc:attributionName" rel="cc:attributionURL">Ladies Learning Code</a></p>
+        <p class="left">Slides created by <a href="http://christinatruong.com">Christina Truong</a> for <a prefix="cc: http://creativecommons.org/ns#" href="http://ladieslearningcode.com" property="cc:attributionName" rel="cc:attributionURL">Ladies Learning Code</a></p>
         <p class="right">Use the left <span class="arrow">&#8592;</span> and right <span class="arrow">&#8594;</span> arrow keys to navigate</p>
       </footer>
     </section>
@@ -60,7 +60,7 @@
       </div>
       <footer>
         <a class="left" rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" src="framework/img/cc-by-nc.png" /></a>
-        <p class="left">Content created by <a href="http://christinatruong.com">Christina Truong</a> for <a prefix="cc: http://creativecommons.org/ns#" href="http://ladieslearningcode.com" property="cc:attributionName" rel="cc:attributionURL">Ladies Learning Code</a></p>
+        <p class="left">Content created by Kassandra Lenters for <a prefix="cc: http://creativecommons.org/ns#" href="http://ladieslearningcode.com" property="cc:attributionName" rel="cc:attributionURL">Ladies Learning Code</a></p>
         <p class="right">Use the left <span class="arrow">&#8592;</span> and right <span class="arrow">&#8594;</span> arrow keys to navigate</p>
       </footer>
     </section>
@@ -132,14 +132,18 @@
     <section class="slide" data-markdown>
      <script type= "text/template">
        #Code is..
-       ## A SET OF INSTRUCTIONS THAT TELLS THE COMPUTER WHAT TO DO
+       ## A SET OF INSTRUCTIONS THAT TELLS THE COMPUTER WHAT TO DO.
 
+       <br>
        ![Running robot gif](framework/img/workshop/runningrobot.gif)
        ![Dancing robot gif](framework/img/workshop/dancingrobot.gif)
        ![eating robot gif](framework/img/workshop/eatingrobot.gif)
        ![Dancing robot gif](framework/img/workshop/dancingrobot2.gif)
        ![Dancing robot gif](framework/img/workshop/bluerobot.gif)
        ![Dancing robot gif](framework/img/workshop/partyrobot.gif)
+
+       <p> In code, we call a set of instructions an <strong style="color:#8b31e0;">algorithm</strong>.</p><!-- .element: class="delayed" -->
+
      </script>
     </section>
 
@@ -222,41 +226,26 @@
     </section>
 
 <!--Slide 15-->
-    <section class="slide centered" data-markdown>
-      <script type="text/template">
-        # Processing Example
-
-        <iframe src="https://player.vimeo.com/video/38421611" width="640" height="292" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        <p style="font-size:50%;"><a href="https://vimeo.com/38421611">Forms (process)</a> from <a href="https://vimeo.com/memotv">Memo Akten</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-
-      </script>
-    </section>
-
-<!--Slide 16-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Getting Started
 
         * Processing programs are called Sketches<!-- .element: class="delayed" -->
-        * The folder where we save our programs is called a Sketchbook<!-- .element: class="delayed" -->
         * Let's look at our canvas!<!-- .element: class="delayed" -->
 
         ![graphing](framework/img/workshop/graphing.png)<!-- .element: class="delayed" -->
 
-        ...Stretch &amp; Scuttle!<!-- .element: class="delayed" -->
-
       </script>
     </section>
 
-<!--Slide 17-->
+<!--Slide 16-->
     <section class="slide two-col-list" data-markdown>
       <script type="text/template">
       # Functions
       * A function is...
         * A command that our computer understands
-        * Already built-in and recognized by Processing
-        * E.G. <strong>setup</strong> and <strong>draw</strong>
-        * Later, we'll get to create our own functions!
+        * Processing has built-in functions like <strong>setup</strong> and <strong>draw</strong>
+        * It is already programmed to know what these mean
       * ![http://giphy.com/gifs/loop-infinite-paper-l0HlwKpPGceLgQC9W](framework/img/workshop/draw.gif)
 
         ---
@@ -269,37 +258,7 @@
       </script>
     </section>
 
-<!--Slide 18-->
-    <section class="slide" data-markdown>
-      <script type="text/template">
-        #Meet Your New Best Friend
-
-        ##The Reference!
-
-        <a href="https://processing.org/reference/">processing.org/reference</a>
-
-        ![http://giphy.com/gifs/friends-friendship-bff-3oEdvaba4h0I536VYQ](framework/img/workshop/bff.gif)
-
-          ---
-          <div class="dropdown">
-            <button class="dropbtn">Attributions</button>
-            <div class="dropdown-content">
-              <a href="http://giphy.com/gifs/friends-friendship-bff-3oEdvaba4h0I536VYQ">High Five gif</a>
-            </div>
-
-      </script>
-    </section>
-
-<!--Slide 19-->
-    <section class="slide title" data-markdown>
-      <script type="text/template">
-        #Think, Pair, Share
-        ##What is Sequence?
-        ##Why does it matter?
-      </script>
-    </section>
-
-<!--Slide 20-->
+<!--Slide 17-->
     <section class="slide two-col-list" data-markdown>
       <script type="text/template">
       # Sequence
@@ -324,15 +283,10 @@
       </script>
     </section>
 
-<!--Slide 21-->
+<!--Slide 18-->
     <section class="slide" data-markdown>
       <script type="text/template">
-        #Booleans &amp; Conditionals
-
-        <strong>Booleans</strong> are either <strong>true</strong> or <strong>false</strong>.
-
-        * I am awesome = True
-        * I am afraid of Processing = False
+        #Conditionals
 
         <strong>Conditionals</strong> are when we make decisions based on conditions.
 
@@ -346,7 +300,7 @@
       </script>
     </section>
 
-<!--Slide 22-->
+<!--Slide 19-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Variables
@@ -368,7 +322,7 @@
         </script>
       </section>
 
-<!--Slide 23-->
+<!--Slide 20-->
       <section class="slide" data-markdown>
         <script type="text/template">
           #Stay Sharp!
@@ -389,7 +343,7 @@
         </script>
       </section>
 
-<!--Slide 24-->
+<!--Slide 21-->
         <section class="slide two-col-list" data-markdown>
           <script type="text/template">
           # The Important things in life
@@ -405,14 +359,14 @@
           </script>
         </section>
 
-<!--Slide 25-->
+<!--Slide 22-->
     <section class="slide title" data-toc data-markdown>
       <script type="text/template">
         #LET'S GET CODING!
       </script>
     </section>
 
-<!--Slide 26-->
+<!--Slide 23-->
     <section class="slide" data-toc data-markdown>
       <script type="text/template">
         #OpenProcessing.org
@@ -424,7 +378,7 @@
       </script>
     </section>
 
-<!--Slide 27-->
+<!--Slide 24-->
     <section class="slide centered" data-toc data-markdown>
       <script type="text/template">
         #OpenProcessing.org
@@ -437,7 +391,7 @@
       </script>
     </section>
 
-<!--Slide 28-->
+<!--Slide 25-->
     <section class="slide" data-toc data-markdown>
       <script type="text/template">
         # + Create a Sketch
@@ -447,7 +401,7 @@
       </script>
     </section>
 
-<!--Slide 29-->
+<!--Slide 26-->
     <section class="slide" data-markdown>
       <script type="text/template">
       # Setting up the Sketch
@@ -464,7 +418,7 @@
       </script>
     </section>
 
-<!--Slide 30-->
+<!--Slide 27-->
     <section class="slide" data-markdown>
       <script type="text/template">
       # Draw Something
@@ -481,10 +435,33 @@
 
       * Click "Run" - What happens?
 
+      ##Remember: We only need ONE setup and ONE draw<!-- .element: class="delayed" -->
+
       </script>
     </section>
 
-<!--Slide 31-->
+<!--Slide 28-->
+    <section class="slide" data-markdown>
+      <script type="text/template">
+        #Meet Your New Best Friend
+
+        ##The Reference!
+
+        Open <a href="https://processing.org/reference/">processing.org/reference</a> in a new tab.
+
+        ![http://giphy.com/gifs/friends-friendship-bff-3oEdvaba4h0I536VYQ](framework/img/workshop/bff.gif)
+
+          ---
+          <div class="dropdown">
+            <button class="dropbtn">Attributions</button>
+            <div class="dropdown-content">
+              <a href="http://giphy.com/gifs/friends-friendship-bff-3oEdvaba4h0I536VYQ">High Five gif</a>
+            </div>
+
+      </script>
+    </section>
+
+<!--Slide 29-->
     <section class="slide" data-markdown>
       <script type="text/template">
       # Drawing Shapes
@@ -499,44 +476,27 @@
       </script>
     </section>
 
-<!--Slide 32-->
+<!--Slide 30-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Colour
 
-        ##Background colour
-        background (R,G,B);
+        ```background (R,G,B);```
 
-        ##Shape colour
-        fill (R,G,B);
+        * R,G,B stands for...?
 
-        ##Shape outline
-        stroke (R,G,B);
+        <p><strong style="color:firebrick;">Red</strong>, <strong style="color:forestgreen;">Green</strong>, <strong style="color:dodgerblue;">Blue</strong></p><!-- .element: class="delayed" -->
 
-        * R,G,B stands for...?<!-- .element: class="delayed" -->
+        <p>Go to <a href="http://colorpicker.com">colorpicker.com</a></p><!-- .element: class="delayed" -->
 
-      </script>
-    </section>
+        What is the largest number value that RGB can have?<!-- .element: class="delayed" -->
 
-<!--Slide 33-->
-    <section class="slide" data-markdown>
-      <script type="text/template">
-        #RGB
-
-        <strong style="color:firebrick;">Red</strong>, <strong style="color:forestgreen;">Green</strong>, <strong style="color:dodgerblue;">Blue</strong>
-
-        Go to <a href="http://colorpicker.com">colorpicker.com</a>
-
-        What is the largest number value that RGB can have?
-
-        What colour is (255,255,255)?<!-- .element: class="delayed" -->
-
-        How about (0,0,0)?<!-- .element: class="delayed" -->
+        What colour is (0,0,0)?<!-- .element: class="delayed" -->
 
       </script>
     </section>
 
-<!--Slide 34-->
+<!--Slide 31-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Add Some Colour
@@ -548,20 +508,30 @@
         }
 
         void draw(){
-          fill(20,200,200); //Sequence matters!
+          fill(20,200,200); //This changes the shape colour
           ellipse(100,100,100,100);
         }
         ```
 
+        * What else can you change the colour of? Check the reference!<!-- .element: class="delayed" -->
+
       </script>
     </section>
 
-<!--Slide 35-->
+  <!--Slide 32-->
+      <section class="slide title" data-markdown>
+        <script type="text/template">
+          #Save Your Work!
+          ##Click 'Save' > 'Submit'
+        </script>
+      </section>
+
+<!--Slide 33-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #mouseMoved
         * This tracks when the mouse is moved!
-        * We can also use the coordinates of our mouse to change the sketch.
+        * Which is which? <i>...Stretch &amp; Scuttle!</i>
 
         ``` processing
         void setup() {
@@ -578,46 +548,13 @@
       </script>
     </section>
 
-<!--Slide 36-->
-    <section class="slide" data-markdown>
-      <script type="text/template">
-        #Create a Function!
-
-        ``` processing
-        void setup(){
-          size(600,600);
-          background(255);
-        }
-
-        void draw(){
-          paintbrush(); //Call our 'paintbrush' function
-        }
-
-        void paintbrush(){ //Create a new function called 'paintbrush'
-          fill(20,200,200); //Move the code for it down here
-          noStroke();
-          ellipse(mouseX,mouseY,20,20);
-        }
-        ```
-
-      </script>
-    </section>
-
-<!--Slide 37-->
-    <section class="slide title" data-markdown>
-      <script type="text/template">
-        #Save Your Work!
-        ##Click 'Save' > 'Submit'
-      </script>
-    </section>
-
-<!--Slide 38-->
+<!--Slide 34-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Paintbrush
 
         * When do we want the brush to 'draw' on the canvas?
-        * IF the mouse is pressed down
+        * IF the mouse is pressed down<!-- .element: class="delayed" -->
 
         ``` processing
         void setup(){
@@ -627,21 +564,18 @@
 
         void draw(){
           if(mousePressed == true){ //IF the mouse is pressed
-            paintbrush(); //Call our 'paintbrush' function
+            // Draw paintbrush
+            fill(20,200,200);
+            noStroke();
+            ellipse(mouseX,mouseY,20,20);
           }
-        }
-
-        void paintbrush(){
-          fill(20,200,200);
-          noStroke();
-          ellipse(mouseX,mouseY,20,20);
         }
         ```
 
       </script>
     </section>
 
-<!--Slide 39-->
+<!--Slide 35-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #keyPressed
@@ -650,12 +584,12 @@
 
         Challenge: IF a key is pressed (```keyPressed```) clear the background
 
-        HINT: This has to do with the <strong>background colour</strong>
+        HINT: This has to do with <strong>sequence</strong> (when we draw the background)
 
       </script>
     </section>
 
-<!--Slide 40-->
+<!--Slide 36-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #keyPressed
@@ -670,24 +604,28 @@
 
         void draw(){
           if(mousePressed == true){
-            paintbrush();
+            fill(20,200,200);
+            noStroke();
+            ellipse(mouseX,mouseY,20,20);
           }
           if(keyPressed == true){ //IF a key is pressed
             background(255); //Re-draw a clean background
           }
-        }
-
-        void paintbrush(){
-          fill(20,200,200);
-          noStroke();
-          ellipse(mouseX,mouseY,20,20);
         }
         ```
 
       </script>
     </section>
 
-<!--Slide 41-->
+  <!--Slide 37-->
+      <section class="slide title" data-markdown>
+        <script type="text/template">
+          #Keep Saving!
+          ##Click 'Save' > 'Submit'
+        </script>
+      </section>
+
+<!--Slide 38-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Variables
@@ -701,7 +639,7 @@
       </script>
     </section>
 
-<!--Slide 42-->
+<!--Slide 39-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Make it Grow!
@@ -718,26 +656,22 @@
 
         void draw(){
           if(mousePressed == true){
-            paintbrush();
+            fill(20,200,200);
+            noStroke();
+            grow = grow + 1; // (3) Make the variable increase by 1 each time
+            ellipse(mouseX,mouseY,20,grow); // (2) Replace a value with grow
           }
           if(keyPressed == true){
             background(255);
             grow = 1; // (4) Reset grow to 1 when the background clears
           }
         }
-
-        void paintbrush(){
-          fill(20,200,200);
-          noStroke();
-          grow = grow + 1; // (3) Make the variable increase by 1 each time
-          ellipse(mouseX,mouseY,20,grow); // (2) Replace a value with grow
-        }
         ```
 
       </script>
     </section>
 
-<!--Slide 43-->
+<!--Slide 40-->
     <section class="slide two-col-list" data-markdown>
       <script type="text/template">
         #That's So Random
@@ -758,7 +692,7 @@
       </script>
     </section>
 
-<!--Slide 44-->
+<!--Slide 41-->
     <section class="slide title" data-markdown>
       <script type="text/template">
         #Keep Saving!
@@ -766,14 +700,14 @@
       </script>
     </section>
 
-<!--Slide 45-->
+<!--Slide 42-->
     <section class="slide title" data-markdown>
       <script type="text/template">
-        #Main Project
+        #Final Project
       </script>
     </section>
 
-<!--Slide 46-->
+<!--Slide 43-->
   <section class="slide" data-markdown>
     <script type="text/template">
       #Emoji Art
@@ -789,7 +723,7 @@
     </script>
   </section>
 
-<!--Slide 47-->
+<!--Slide 44-->
 <section class="slide" data-markdown>
   <script type="text/template">
     #Emoji Art<!--insert activity title here-->
@@ -806,14 +740,14 @@
   </script>
 </section>
 
-<!--Slide 48-->
+<!--Slide 45-->
     <section class="slide title" data-markdown>
       <script type="text/template">
         #DEMOS
       </script>
     </section>
 
-<!--Slide 49-->
+<!--Slide 46-->
     <main>
 
       <section class="slide" data-toc data-markdown>
@@ -829,7 +763,7 @@
         </script>
       </section>
 
-<!--Slide 50-->
+<!--Slide 47-->
     <!-- Last slide -->
     <section class="slide last">
       <h1>Thank you!</h1>
