--- a/notes-en.html
+++ b/notes-en.html
@@ -89,7 +89,7 @@
               <br>
               <i>Have mentors join you at front of class and get them to say their name and favourite website/game</i>
               <br><br>
-              The mentors will be here to help you if you have any problems, so don’t be afraid to ask them questions if you get stuck, or if you just want to show them your awesome website! </td>
+              The mentors will be here to help you if you have any problems, so don’t be afraid to ask them questions if you get stuck, or if you just want to show them your awesome projects! </td>
             </tr>
             <tr>
               <td><img src="framework/img/workshop/slides/5.jpg" alt="slide"></td>
