--- a/slides-en.html
+++ b/slides-en.html
@@ -510,6 +510,7 @@
         void draw(){
           fill(20,200,200); //This changes the shape colour
           ellipse(100,100,100,100);
+          //rect(10,10,300,100); Add "//" in front of something to hide it 
         }
         ```
 
