--- a/notes-en.html
+++ b/notes-en.html
@@ -216,7 +216,10 @@
               <td> If we want to know what Processing can do, or what it already knows, we can check here.
               <br><br>
               Throughout the workshop, if you want to figure out how to do something, check the reference first! You'll probably be able to find it here by looking for key words. (e.g. if you want to draw a rectangle)
-              <br><br>(Show learners how to use Ctrl+F to search for key words in the reference)</td>
+              <br><br>(Show learners how to use Ctrl+F to search for key words in the reference)
+              <br><br>(When presenting the example resources to the class, make sure you highlight the different shapes that can be drawn in Processing.
+              Show the class the shape primitives or even look at [https://processing.org/tutorials/drawing/] for examples of how to use them.)
+              </td>
             </tr><tr>
               <td><img src="framework/img/workshop/slides/29.jpg" alt="slide"></td>
               <td> (Show learners where the ellipse is in the reference and encourage them to change the numbers for each value to something else - or try to draw another shape e.g. a rectangle)</td>
@@ -233,7 +236,8 @@
               RGB colours are additive, which means that adding full colour (255 of everything) makes white (pure light). When we take away all of the color we get black.</td>
             </tr><tr>
               <td><img src="framework/img/workshop/slides/31.jpg" alt="slide"></td>
-              <td> We need to tell the computer what colour the circle is before we draw it. Try making two circles that are each a different colour. </td>
+              <td> We need to tell the computer what colour the circle is before we draw it. Try making two circles that are each a different colour.
+              <br><br> *Side note*: If you ever want to get rid of a shape that you've drawn, either delete that line of code, or make it into a comment using "//"</td>
             </tr><tr>
               <td><img src="framework/img/workshop/slides/32.jpg" alt="slide"></td>
               <td> (Show learners how to save)
@@ -480,105 +484,109 @@
     ##Code-Along Slides
 
     <table style="font-size:2rem;">
-      <tr>
-        <td><strong style="background:#8b31e0; color:white; font-size:3.2rem;">Slide</strong></td>
-        <td><strong style="background:#8b31e0; color:white; font-size:3.2rem;">Notes</strong></td>
-      </tr>
-      <tr>
-        <td><img src="framework/img/workshop/slides/22.jpg" alt="slide"></td>
-        <td> Time for our Code-Along!</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/23.jpg" alt="slide"></td>
-        <td> We are using OpenProcessing to save our Processing sketches today. OpenProcessing is a free, online environment where you can share your digital art and explore projects created by other poeple. </td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/24.jpg" alt="slide"></td>
-        <td> (Leave this slide up while learners log in)</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/25.jpg" alt="slide"></td>
-        <td> *Very important*: Be sure to select "Processing.js" mode (under Settings). The P5.js starting code will no longer work, so we can delete this.</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/26.jpg" alt="slide"></td>
-        <td> Type in this code, then click "Run" (play icon at top). This is how we set up our canvas.
-        <br><br>
-        Try changing the numbers from 600 to something else.</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/27.jpg" alt="slide"></td>
-        <td> Let's draw something! What does this code do?
-        <br><br>
-        *Side note*: Everything behind the //backslashes are comments - this is for us humans to remember what each line of code means. You don't need to copy all of the comments on our slides, but it is helpful to make comments in your code when you need a reminder of what something does. </td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/28.jpg" alt="slide"></td>
-        <td> If we want to know what Processing can do, or what it already knows, we can check here.
-        <br><br>
-        Throughout the workshop, if you want to figure out how to do something, check the reference first! You'll probably be able to find it here by looking for key words. (e.g. if you want to draw a rectangle)
-        <br><br>(Show learners how to use Ctrl+F to search for key words in the reference)</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/29.jpg" alt="slide"></td>
-        <td>  (Show learners where the ellipse is in the reference and encourage them to change the numbers for each value to something else - or try to draw another shape e.g. a rectangle)</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/30.jpg" alt="slide"></td>
-        <td> Time to add some colour (woo!). Each of these options have the letters R,G,B in brackets... What does that mean?
-        <br><br>
-        (Open up colorpicker.com up front)
-        <br><br>
-        Q: What colour is (255,255,255)? A: White
-        <br>
-        Q: What colour is (0,0,0)? A: Black
-        <br><br>
-        RGB colours are additive, which means that adding full colour (255 of everything) makes white (pure light). When we take away all of the color we get black.</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/31.jpg" alt="slide"></td>
-        <td> We need to tell the computer what colour the circle is before we draw it. Try making two circles that are each a different colour. </td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/32.jpg" alt="slide"></td>
-        <td> (Show learners how to save)
-        <br><br>
-        Make sure you click Publish after naming your sketch. You can keep editing it afterwards - just click on the "Edit" icon at the top to keep coding.</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/33.jpg" alt="slide"></td>
-        <td> (Review X,Y coordinates using the Stretch &amp; Scuttle Unplugged Activity)
+        <tr>
+          <td><strong style="background:#8b31e0; color:white; font-size:3.2rem;">Slide</strong></td>
+          <td><strong style="background:#8b31e0; color:white; font-size:3.2rem;">Notes</strong></td>
+        </tr>
+        <tr>
+          <td><img src="framework/img/workshop/slides/22.jpg" alt="slide"></td>
+          <td> Time for our Code-Along!</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/23.jpg" alt="slide"></td>
+          <td> We are using OpenProcessing to save our Processing sketches today. OpenProcessing is a free, online environment where you can share your digital art and explore projects created by other poeple. </td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/24.jpg" alt="slide"></td>
+          <td> (Leave this slide up while learners log in)</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/25.jpg" alt="slide"></td>
+          <td> *Very important*: Be sure to select "Processing.js" mode (under Settings). The P5.js starting code will no longer work, so we can delete this.</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/26.jpg" alt="slide"></td>
+          <td> Type in this code, then click "Run" (play icon at top). This is how we set up our canvas.
           <br><br>
-          Processing can track the x,y position of our mouse, then use that number in our sketch.
+          Try changing the numbers from 600 to something else.</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/27.jpg" alt="slide"></td>
+          <td> Let's draw something! What does this code do?
           <br><br>
-          E.g. We can take the Y coordinate of our mouse, then make the circle's width = that number. So the closer to the top of the canvas, the smaller the circle. As we move down (and Y increases) the circle should get larger. - Try it out! </td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/34.jpg" alt="slide"></td>
-        <td> Notice how there are two equal signs? When we use one equal sign we are telling the program what something equals, but when we use two equal signs we are *asking* (having the program check if it is true)
-        <br><br>
-        Q: What is that called again? When something is either True or False? A: Boolean.</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/35.jpg" alt="slide"></td>
-        <td> (Give learners a few minutes to try and solve this on their own. If someone figures it out, have them come up to the front and share their solution with the group. See next slide for possible solution.)</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/36.jpg" alt="slide"></td>
-        <td> We are basically drawing a new, blank background on top of our painted canvas.</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/37.jpg" alt="slide"></td>
-        <td> (Remind everyone to save &amp; click 'publish' again)</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/38.jpg" alt="slide"></td>
-        <td> Remember "box" from before? What number did we set that variable to, again? (three!)
-        <br><br>
-        Anyone want to guess what this line of code looks like? (Naming the variable and setting it to a number, like before - see next slide for answer)</td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/39.jpg" alt="slide"></td>
-        <td>The program needs to know the new variable before the draw function, so let's put it at the top. (int grow = 1;)
-        <br><br>
-        Next, we need to replace another number with "grow" inside of our paintbrush function.
-        <br><br>
-        Every time "draw" loops through, we want "grow" to increase - to change to a larger number - so it looks like our paintbrush is growing. (grow = grow + 1;)
-        <br><br>
-        Finally, if we want to reset the paintbrush size back to normal, we can make "grow" go back to equaling 1 when we clear the background, in "draw." (grow = 1;) </td>
-      </tr><tr>
-        <td><img src="framework/img/workshop/slides/40.jpg" alt="slide"></td>
-        <td> Let's mix things up a bit! We can make any number random using the Random() function.
-        <br><br>
-        Q: What is the largest number we can use for colours in RGB? A: 255.
-        <br><br>
-        To make our paintbrush change random rainbow colours, we can replace the fill value with random(255).
-        <br><br>
-        e.g. fill(random(255),random(255),random(255))</td>
-      </tr>
+          *Side note*: Everything behind the //backslashes are comments - this is for us humans to remember what each line of code means. You don't need to copy all of the comments on our slides, but it is helpful to make comments in your code when you need a reminder of what something does. </td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/28.jpg" alt="slide"></td>
+          <td> If we want to know what Processing can do, or what it already knows, we can check here.
+          <br><br>
+          Throughout the workshop, if you want to figure out how to do something, check the reference first! You'll probably be able to find it here by looking for key words. (e.g. if you want to draw a rectangle)
+          <br><br>(Show learners how to use Ctrl+F to search for key words in the reference)
+          <br><br>(When presenting the example resources to the class, make sure you highlight the different shapes that can be drawn in Processing.
+          Show the class the shape primitives or even look at [https://processing.org/tutorials/drawing/] for examples of how to use them.)
+          </td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/29.jpg" alt="slide"></td>
+          <td> (Show learners where the ellipse is in the reference and encourage them to change the numbers for each value to something else - or try to draw another shape e.g. a rectangle)</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/30.jpg" alt="slide"></td>
+          <td> Time to add some colour (woo!). Each of these options have the letters R,G,B in brackets... What does that mean?
+          <br><br>
+          (Open up colorpicker.com up front)
+          <br><br>
+          Q: What colour is (255,255,255)? A: White
+          <br>
+          Q: What colour is (0,0,0)? A: Black
+          <br><br>
+          RGB colours are additive, which means that adding full colour (255 of everything) makes white (pure light). When we take away all of the color we get black.</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/31.jpg" alt="slide"></td>
+          <td> We need to tell the computer what colour the circle is before we draw it. Try making two circles that are each a different colour.
+          <br><br> *Side note*: If you ever want to get rid of a shape that you've drawn, either delete that line of code, or make it into a comment using "//"</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/32.jpg" alt="slide"></td>
+          <td> (Show learners how to save)
+          <br><br>
+          Make sure you click Publish after naming your sketch. You can keep editing it afterwards - just click on the "Edit" icon at the top to keep coding.</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/33.jpg" alt="slide"></td>
+          <td> (Review X,Y coordinates using the Stretch &amp; Scuttle Unplugged Activity)
+            <br><br>
+            Processing can track the x,y position of our mouse, then use that number in our sketch.
+            <br><br>
+            E.g. We can take the Y coordinate of our mouse, then make the circle's width = that number. So the closer to the top of the canvas, the smaller the circle. As we move down (and Y increases) the circle should get larger. - Try it out! </td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/34.jpg" alt="slide"></td>
+          <td> Notice how there are two equal signs? When we use one equal sign we are telling the program what something equals, but when we use two equal signs we are *asking* (having the program check if it is true)
+          <br><br>
+          Q: What is that called again? When something is either True or False? A: Boolean.</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/35.jpg" alt="slide"></td>
+          <td> (Give learners a few minutes to try and solve this on their own. If someone figures it out, have them come up to the front and share their solution with the group. See next slide for possible solution.)</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/36.jpg" alt="slide"></td>
+          <td> We are basically drawing a new, blank background on top of our painted canvas.</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/37.jpg" alt="slide"></td>
+          <td> (Remind everyone to save &amp; click 'publish' again)</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/38.jpg" alt="slide"></td>
+          <td> Remember "box" from before? What number did we set that variable to, again? (three!)
+          <br><br>
+          Anyone want to guess what this line of code looks like? (Naming the variable and setting it to a number, like before - see next slide for answer)</td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/39.jpg" alt="slide"></td>
+          <td>The program needs to know the new variable before the draw function, so let's put it at the top. (int grow = 1;)
+          <br><br>
+          Next, we need to replace another number with "grow" inside of our paintbrush function.
+          <br><br>
+          Every time "draw" loops through, we want "grow" to increase - to change to a larger number - so it looks like our paintbrush is growing. (grow = grow + 1;)
+          <br><br>
+          Finally, if we want to reset the paintbrush size back to normal, we can make "grow" go back to equaling 1 when we clear the background, in "draw." (grow = 1;) </td>
+        </tr><tr>
+          <td><img src="framework/img/workshop/slides/40.jpg" alt="slide"></td>
+          <td> Let's mix things up a bit! We can make any number random using the Random() function.
+          <br><br>
+          Q: What is the largest number we can use for colours in RGB? A: 255.
+          <br><br>
+          To make our paintbrush change random rainbow colours, we can replace the fill value with random(255).
+          <br><br>
+          e.g. fill(random(255),random(255),random(255))</td>
+        </tr>
     </table>
 
     </script>
