available to chapters

--- a/notes-en.html
+++ b/notes-en.html
@@ -25,7 +25,7 @@
 
     <section class="slide" data-toc data-markdown>
       <script type="text/template">
-        ##Lead Instructor Notes
+        ##Instructor Notes
 
         ##Girls Learning Code: Generative Art with Processing
         <br>
