--- a/slides-en.html
+++ b/slides-en.html
@@ -54,13 +54,13 @@
         <li><a href="http://twitter.com/learningcode">@learningcode</a></li>
         <li><a href="https://twitter.com/search?q=%23girlslearningcode&src=typd">#girlslearningcode</a></li>
       </ul>
-
+<!--
       <div class="sponsor">
         <p>In partnership with<br> <img src="framework/img/telus-logo-white.svg" alt="Telus"></p>
-      </div>
+      </div>-->
       <footer>
         <a class="left" rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" src="framework/img/cc-by-nc.png" /></a>
-        <p class="left">Content created by Kassandra Lenters for <a prefix="cc: http://creativecommons.org/ns#" href="http://ladieslearningcode.com" property="cc:attributionName" rel="cc:attributionURL">Ladies Learning Code</a></p>
+        <p class="left">Content created by Kassandra Lenters &amp; Kat Barrett for <a prefix="cc: http://creativecommons.org/ns#" href="http://ladieslearningcode.com" property="cc:attributionName" rel="cc:attributionURL">Ladies Learning Code</a></p>
         <p class="right">Use the left <span class="arrow">&#8592;</span> and right <span class="arrow">&#8594;</span> arrow keys to navigate</p>
       </footer>
     </section>
@@ -510,7 +510,7 @@
         void draw(){
           fill(20,200,200); //This changes the shape colour
           ellipse(100,100,100,100);
-          //rect(10,10,300,100); Add "//" in front of something to hide it 
+          //rect(10,10,300,100); Add "//" in front of something to hide it
         }
         ```
 
