--- a/slides-fr.html
+++ b/slides-fr.html
@@ -55,13 +55,13 @@
         <li><a href="http://twitter.com/learningcode">@learningcode</a></li>
         <li><a href="https://twitter.com/search?q=%23girlslearningcode&src=typd">#girlslearningcode</a></li>
       </ul>
-
+<!--
       <div class="sponsor">
         <p>En partenariat avec<br> <img src="framework/img/telus-logo-white.svg" alt="Telus"></p>
-      </div>
+      </div>-->
       <footer>
         <a class="left" rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" src="framework/img/cc-by-nc.png" /></a>
-        <p class="left">Contenu créé par Kassandra Lenters pour <a prefix="cc: http://creativecommons.org/ns#" href="http://ladieslearningcode.com" property="cc:attributionName" rel="cc:attributionURL">Ladies Learning Code</a></p>
+        <p class="left">Contenu créé par Kassandra Lenters et Kat Barrett pour <a prefix="cc: http://creativecommons.org/ns#" href="http://ladieslearningcode.com" property="cc:attributionName" rel="cc:attributionURL">Ladies Learning Code</a></p>
         <p class="right">Naviguez avec la flèche gauche <span class="arrow">&#8592;</span> et droite <span class="arrow">&#8594;</span></p>
       </footer>
     </section>
@@ -116,7 +116,7 @@
     <section class="slide centered" data-markdown>
       <script type="text/template">
        ![Bannière Code du programmeur](framework/img/workshop/scroll.png)
-       
+
        #LE CODE DE LA PROGRAMMEUSE
          ## 1. DEMANDEZ DE L'AIDE  <!-- .element: class="delayed" -->
          ## 2. SOYEZ PRÉSENTES  <!-- .element: class="delayed" -->
@@ -427,7 +427,7 @@
 
       ``` processing
       void setup() { //Ceci est un commentaire
-        size(600,600); //Une seule préparation (setup) est nécessaire 
+        size(600,600); //Une seule préparation (setup) est nécessaire
       }
 
       void draw(){ //Dessin en boucle
@@ -512,7 +512,7 @@
         void draw(){
           fill(20,200,200); //Change la couleur de la forme
           ellipse(100,100,100,100);
-          //rect(10,10,300,100); Ajoutez « // » devant un élément pour le cacher. 
+          //rect(10,10,300,100); Ajoutez « // » devant un élément pour le cacher.
         }
         ```
 
