--- a/slides-fr.html
+++ b/slides-fr.html
@@ -148,6 +148,36 @@
 
      </script>
     </section>
+    
+    <section class="slide" data-markdown>
+      <script type="text/template">
+        # Le thème de mars est…
+        ## L’EAU
+
+        Il nourrit, nettoie, transporte. Nous en sommes faits et cela nous maintient en vie. Quel est ton truc préféré à propos de l'eau? Qui a accès à l'eau potable? Comment pourrions-nous améliorer cela?
+
+        <strong>Participez au thème de ce mois-ci en : </strong> Créant l'art sur l'eau.
+
+        <img src="framework/img/workshop/surfing.gif" width="600px"/>
+
+        *Quelles couleurs, formes ou mouvements ressemblent à de l'eau?*
+
+
+        <hr>
+        ###Ressources supplémentaires
+
+        ###<a href="https://www.openprocessing.org/browse/?q=water&time=anytime&type=all#">Projets sur l'eau sur OpenProcessing</a>
+        <br>
+
+          <div class="dropdown">
+            <button class="dropbtn">Attributions</button>
+            <div class="dropdown-content">
+              <a href="https://dribbble.com/shots/3722765-Surf-s-Up-Brah">Surfing user gif by Yeah Haus</a>
+            </div>
+          </div>
+
+      </script>
+    </section>
 
 <!--Diapositive 9-->
     <section class="slide title" data-markdown>
